<resources>
    <string name="app_name">NEW</string>
    <string name="add">增加</string>
    <string name="reduce">減少</string>
    <string name="reset">重置</string>
    <string name="first_progress">第一进度条百分比：</string>
    <string name="second_progress">%  第二进度条百分比：</string>
    <string name="tiaozhuan">跳轉</string>
    <string name="Save">SaveInstance</string>
    <string name="choose">您懸著的城市是:</string>
    <string name="显示对话框">show</string>
    <string name="welcome">欢迎</string>
    <string name="thanks">欢迎大家的支持</string>
    <string name="queding">确定</string>
    <string name="huanying">欢迎大家</string>
    <string name="web">Webview</string>
    <string name="jiszhai">正在加载</string>
    <string name="available">network is available!</string>
    <string name="unavailable">network is unavailable!</string>
</resources>
